--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,20 @@ env:
   - TRAVIS_BUILD_TYPE=Release
   
 before_script:
+  # Install a recent CMake version 
+  - sudo add-apt-repository -y ppa:kalakris/cmake
+  - sudo apt-get install cmake
+  # Build and install YCM
+  - git clone https://github.com/robotology/ycm.git
+  - cd ycm
+  - mkdir build
+  - cd build
+  - cmake ..
+  - make
+  - sudo make install
+  - cd ../..
+  # Run CMake
   - cmake -DCREATE_TESTS:BOOL=ON -DCMAKE_CXX_FLAGS:STRING="-Wall" -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} ./..
+  
 
 script: make && make test
