--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ before_script:
   - sudo make install
   - cd ../..
   # Run CMake
-  - cmake -DCREATE_TESTS:BOOL=ON -DCMAKE_CXX_FLAGS:STRING="-Wall" -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} ./..
+  - mkdir build
+  - cd build
+  - cmake -DCREATE_TESTS:BOOL=ON -DCMAKE_CXX_FLAGS:STRING="-Wall" -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} ..
   
 
 script: make && make test
