--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(proj_source_path ../src/LibTemplateCMake/)
+set(proj_source_path ../src/${CamelCaseName}/)
 include_directories(${proj_source_path} ${CMAKE_CURRENT_BINARY_DIR}/${proj_source_path})
 
 add_executable(check_sum_and_diff_test check_sum_and_diff.cpp)
