--- a/src/LibTemplateCMake/CMakeLists.txt
+++ b/src/LibTemplateCMake/CMakeLists.txt
@@ -1,35 +1,27 @@
-include(GenerateExportHeader)
+# This is the "physical" name of the sublibrary built in this directory
+set(library_target_name lib-template-cmake)
 
 set(${library_target_name}_SRCS
-    template-lib.cpp
+        src/LibTemplateCMake.cpp
 )
 
 set(${library_target_name}_HDRS
-    template-lib.h
+        include/LibTemplateCMake/LibTemplateCMake.h
 )
 
-set(library_export_header_name ${library_target_name}-export.h)
+add_library(${library_target_name} ${${library_target_name}_SRCS} ${${library_target_name}_HDRS})
 
-add_library(${library_target_name} SHARED ${${library_target_name}_SRCS} ${${library_target_name}_HDRS})
+set_target_properties(${library_target_name} PROPERTIES VERSION ${${PROJECT_NAME}_VERSION}
+                                             PUBLIC_HEADER "${${library_target_name}_HDRS}")
 
-generate_export_header(${library_target_name}
-                       EXPORT_FILE_NAME ${library_export_header_name}
-                       BASE_NAME ${VARS_PREFIX})
-
-set(${library_target_name}_EXPORT_HDRS "${CMAKE_CURRENT_BINARY_DIR}/${library_export_header_name}")
-list(APPEND ${library_target_name}_HDRS ${${library_target_name}_EXPORT_HDRS})
-
-set_target_properties(${library_target_name} PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
-                                              SOVERSION ${${VARS_PREFIX}_VERSION}
-                                              PUBLIC_HEADER "${${library_target_name}_HDRS}")
-
-target_include_directories(${library_target_name} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR};${CMAKE_SOURCE_DIR}/src>"
-                                                         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>")
+target_include_directories(${library_target_name} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+                                                         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
 
 install(TARGETS ${library_target_name}
-        EXPORT ${CamelCaseName}
-        RUNTIME DESTINATION "${${VARS_PREFIX}_INSTALL_BINDIR}" COMPONENT bin
-        LIBRARY DESTINATION "${${VARS_PREFIX}_INSTALL_LIBDIR}" COMPONENT shlib
-        PUBLIC_HEADER DESTINATION "${${VARS_PREFIX}_INSTALL_INCLUDEDIR}/${CamelCaseName}" COMPONENT dev)
+        EXPORT ${PROJECT_NAME}
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT lib
+        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
+        PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/LibTemplateCMake" COMPONENT dev)
 
-set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${library_target_name})
+set_property(GLOBAL APPEND PROPERTY ${PROJECT_NAME}_TARGETS ${library_target_name})
