--- a/src/ExeExample/CMakeLists.txt
+++ b/src/ExeExample/CMakeLists.txt
@@ -1,7 +1,5 @@
-set(proj_source_path ../LibTemplateCMake/)
-include_directories(${proj_source_path} ${CMAKE_CURRENT_BINARY_DIR}/${proj_source_path})
-
 add_executable(ExeExample main.cpp)
 
-target_link_libraries(ExeExample ${library_target_name})
+target_link_libraries(ExeExample lib-template-cmake)
+
 install(TARGETS ExeExample DESTINATION bin)
