--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
-/external/
+# Pre & Compiled source #
+#########################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.out
+*.app
+*.slo
+*.lo
+*.gch
+*.pch
+*.dylib
+*.mod
+*.lai
+*.la
+*.a
+*.lib
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Custom Folders #
+##################
+.idea/
+build*/
+xcodeenvvar.txt
