Improve file documentations for a guided template
The documentation of the many CMakeLists have been improved.
In particular, the aim of the documentation is to guide the reader
throughout the file explaining the used CMake commands, providing
references and meaningful, yet minimal, explanations.

Some minor changes and typo correction have been made/addressed.
C++ header extension has been changed from H to HPP.
Minimal supported CMake version is 3.0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,29 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.0)
 
-### Steps for customization
-# 1. Change the argument to project(..) with the name of your library/package
-#    (it will be the one used for find_package call)
+### CUSTOMIZATION STEPS
+# 1. Change the argument to project() with the name of your library/package
+#    (it will be the one used for find_package() call)
 # 2. Change version information
-# 3. Add your libraries as subdirectories in src, i.e. see src/LibTemplateCMake
-# 4. Add your executables as subdirectories in src, i.e. see src/ExeExample
-# 5. Add the test to your library in test, i.e. see test/chest_sum_and_diff and modify test/CMakeLists.txt accordingly.
+# 3. Add your library source files in the subdirectories
+#    - src/"LibName"/include
+#    - src/"LibName"/src
+# 4. Add your executable source files in the subdirectories
+#    - src/"ExecName"
 # 5. Update src/CMakeLists.txt
+# 6. Add the tests to your library in /test subdirectory and modify
+#    test/CMakeLists.txt accordingly.
+###
 
-# This sets the PROJECT_NAME 
-# We use this to export all the files such 
-# that is then possible to find_package(LibTemplateCMake) 
-# in third party projects 
-project(LibTemplateCMake CXX)
+# This sets the PROJECT_NAME, PROJECT_VERSION as well as other variable
+# listed here: https://cmake.org/cmake/help/latest/command/project.html
+# We use this name to export all the files such that is then possible to use
+# find_package(LibTemplateCMake) in third party projects.
+project(LibTemplateCMake
+        LANGUAGES CXX
+        VERSION 0.0.0.0)
 
-set(${PROJECT_NAME}_MAJOR_VERSION 0)
-set(${PROJECT_NAME}_MINOR_VERSION 0)
-set(${PROJECT_NAME}_PATCH_VERSION 1)
-set(${PROJECT_NAME}_VERSION ${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}.${${PROJECT_NAME}_PATCH_VERSION})
-
-# To define the CMAKE_INSTALL_LIBDIR, CMAKE_INSTALL_BINDIR macros
+# Defines the CMAKE_INSTALL_LIBDIR, CMAKE_INSTALL_BINDIR and many other useful macros
+# See https://cmake.org/cmake/help/latest/module/GNUInstallDirs.html
 include(GNUInstallDirs)
 
 # To build shared libraries in Windows, we set CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS to TRUE
@@ -28,21 +31,28 @@ include(GNUInstallDirs)
 # See https://blog.kitware.com/create-dlls-on-windows-without-declspec-using-new-cmake-export-all-feature/
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
-# We use InstallBasicPackageFiles, AddUninstallTarget and AddInstallRPATHSupport from YCM
+# We use
+# - InstallBasicPackageFiles
+# - AddUninstallTarget
+# - AddInstallRPATHSupport
+# from YCM. See https://github.com/robotology/ycm/
+# If you are unable to satisfy or don't want this dependency, downlowad
+# the above-mentioned 3 files, place them under in the project "cmake"
+# folder and remove the following find_package() call.
 find_package(YCM REQUIRED)
 
 # We keep any additional CMake module use in cmake directory
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-## Options
-# Setup options
+### Options
+# Shared/Dynamic or Static library?
 option(BUILD_SHARED_LIBS "Build libraries as shared as opposed to static" ON)
 
-# Testing related commands
+# Build test related commands?
 option(BUILD_TESTING "Create tests using CMake" OFF)
 if(BUILD_TESTING)
     enable_testing()
-endif(BUILD_TESTING)
+endif()
 
 # Support RPATH?
 option(ENABLE_RPATH "Enable RPATH for this library" ON)
@@ -53,11 +63,10 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BIND
                           DEPENDS ENABLE_RPATH
                           USE_LINK_PATH)
 
-# Compile and install related commands
+### Compile- and install-related commands
 add_subdirectory(src)
 
-# Install the files necessary to call find_package(LibTemplateCMake)
-# in CMake projects
+# Install the files necessary to call find_package(LibTemplateCMake) in CMake projects
 include(InstallBasicPackageFiles)
 install_basic_package_files(${PROJECT_NAME} VARS_PREFIX ${PROJECT_NAME}
                                             VERSION ${${PROJECT_NAME}_VERSION}
@@ -67,7 +76,7 @@ install_basic_package_files(${PROJECT_NAME} VARS_PREFIX ${PROJECT_NAME}
 # Add the uninstall target
 include(AddUninstallTarget)
 
+# Add integration tests (unit tests for each library should be in each sublibrary directory)
 if(BUILD_TESTING)
-    # Add integration tests (unit tests for each library should be in each sublibrary directory)
     add_subdirectory(test)
 endif()
