--- a/src/ExeExample/CMakeLists.txt
+++ b/src/ExeExample/CMakeLists.txt
@@ -1,5 +1,11 @@
-add_executable(ExeExample main.cpp)
+set(EXE_TARGET_NAME ExeExample)
 
-target_link_libraries(ExeExample lib-template-cmake)
+set(${EXE_TARGET_NAME}_SRC
+        main.cpp
+)
 
-install(TARGETS ExeExample DESTINATION bin)
+add_executable(${EXE_TARGET_NAME} ${${EXE_TARGET_NAME}_SRC})
+
+target_link_libraries(${EXE_TARGET_NAME} LibTemplateCMake)
+
+install(TARGETS ${EXE_TARGET_NAME} DESTINATION bin)
