--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,36 +3,29 @@ version: 1.0.{build}
 clone_folder: c:\dev\lib-template-cmake
 
 os:
-  - Visual Studio 2013
-  - Visual Studio 2015
-  
+    - Visual Studio 2013
+    - Visual Studio 2015
+
 install:
-  # to install downloader do: "cinst wget -x86"
-  # the format is: "wget -q URL -O c:\path-to-file\file_name"
-  # special format is: "wget -q --no-check-certificate URL -O c:\path-to-file\file_name"
-  # that accounts for downloading from e.g. https://googledrive.com/host/$HASH
-  # -
-  # to install unzipper do: "cinst 7zip.commandline -x86"
-  # the format is: "7z x c:\path-to-archive\archive.zip -oc:\path-where-unzip -y > nul" 
-  - cd c:\dev
-  - ps: Start-FileDownload 'https://github.com/robotology/ycm/releases/download/v0.2.2/YCM-0.2.2-win32.msi'
-  - cmd: c:\dev\YCM-0.2.2-win32.msi 
-  
+    - cd c:\dev
+    - ps: Start-FileDownload 'https://github.com/robotology/ycm/releases/download/v0.2.2/YCM-0.2.2-win32.msi'
+    - ps: msiexec /i c:\dev\YCM-0.2.2-win32.msi /quiet /qn /norestart
+
 build:
 
 build_script:
-  # build the library 
-  - cd c:\dev\lib-template-cmake
-  - md build
-  - cd build
-  - cmake -DBUILD_TESTING:BOOL=ON -DCMAKE_CXX_FLAGS:STRING="/W4" ..
-  # build the library for Release and Debug
-  - cmake --build . --config Debug 
-  - cmake --build . --config Release 
-  
+    # Build the library
+    - cd c:\dev\lib-template-cmake
+    - md build
+    - cd build
+    - cmake -DBUILD_TESTING:BOOL=ON -DCMAKE_CXX_FLAGS:STRING="/W4" ..
+    # Build the library for Release and Debug
+    - cmake --build . --config Debug
+    - cmake --build . --config Release
+
 after_build:
-  # Install only release 
-  - cmd: cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
+    # Install only release
+    - cmd: cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
 
 # For some reason, tests are not working. Debug this and enable them again
 # test_script:
