Fix appveyor configuration file for tests
Ctests still fail.
It is needed further investigations.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,8 +25,9 @@ build_script:
 
 after_build:
     # Install only release
-    - cmd: cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
+    - cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
 
 # For some reason, tests are not working. Debug this and enable them again
 # test_script:
-#   - cmd: ctest -C Release -VV
+#    - ctest -C Debug -VV
+#    - ctest -C Release -VV
