--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,48 @@ env:
     - TRAVIS_BUILD_TYPE=Debug
     - TRAVIS_BUILD_TYPE=Release
 
+before_install:
+    # Update CMake to version >3.4
+    # Linux
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget http://www.cmake.org/files/v3.4/cmake-3.4.3.tar.gz;                                fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then tar -xzf cmake-3.4.3.tar.gz;                                                            fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd cmake-3.4.3/;                                                                        fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./configure;                                                                            fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make;                                                                                   fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo make install;                                                                      fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo update-alternatives --install /usr/bin/cmake cmake /usr/local/bin/cmake 1 --force; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd ..;                                                                                  fi
+    # macOS
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update;                               fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew outdated cmake || brew upgrade cmake; fi
+
+    # Use ccache also for clang and clang++ on linux
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ];    then sudo ln -s ../../bin/ccache /usr/lib/ccache/clang;   fi; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ];    then export CFLAGS="-Qunused-arguments";                  fi; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CXX" == "clang++" ]; then sudo ln -s ../../bin/ccache /usr/lib/ccache/clang++; fi; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-Qunused-arguments";                fi; fi
+
+    # Install ccache on osx
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install ccache;                               fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
+
+    # Print some more system information after installing all build tools
+    - echo "-------------------- BEGIN SYSTEM INFORMATION --------------------"
+    - uname -a
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then lsb_release -a;                     fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ];   then system_profiler SPSoftwareDataType; fi
+    - env
+    - which cmake
+    - cmake --version
+    - which $CC
+    - $CC --version
+    - which $CXX
+    - $CXX --version
+    - which ccache
+    - ccache --version
+    - ccache -s
+    - echo "--------------------  END SYSTEM INFORMATION  --------------------"
+
 before_script:
     # Run CMake
     - mkdir build
