--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ env:
 
 before_install:
     # Update package managers
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then apt-get -qq update;  fi
-    - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then brew update;         fi
-    
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -qq update;  fi
+    - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then brew update;              fi
+
     # Use ccache also for clang and clang++ on linux
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ];    then sudo ln -s ../../bin/ccache /usr/lib/ccache/clang;   fi; fi
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ];    then export CFLAGS="-Qunused-arguments";                  fi; fi
