Update main CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ mark_as_advanced(ENABLE_RPATH)
 include(AddInstallRPATHSupport)
 add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}"
                           LIB_DIRS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
+                          INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}"
                           DEPENDS ENABLE_RPATH
                           USE_LINK_PATH)
 
@@ -74,13 +75,23 @@ endif()
 ### Compile- and install-related commands
 add_subdirectory(src)
 
-# Install the files necessary to call find_package(LibTemplateCMake) in CMake projects
+# Create and install CMake configuration files for your project that are
+# necessary to for other projects to call find_package(LibTemplateCMake).
+#
+# install_basic_package_files() comes with many input parameters to customize
+# the configuration files. The parameters used in the following call provide
+# basic versions of CMake configuration files.
+# See install_basic_package_files() documentation found in ./cmake folder.
+#
+# Note that if your library depends from other libraries, you are probably
+# required to used the install_basic_package_files() DEPENDENCIES option.
 include(InstallBasicPackageFiles)
-install_basic_package_files(${PROJECT_NAME} VARS_PREFIX ${PROJECT_NAME}
-                                            VERSION ${${PROJECT_NAME}_VERSION}
-                                            COMPATIBILITY AnyNewerVersion
-                                            TARGETS_PROPERTY ${PROJECT_NAME}_TARGETS
-                                            NO_CHECK_REQUIRED_COMPONENTS_MACRO)
+install_basic_package_files(${PROJECT_NAME}
+                            VERSION ${${PROJECT_NAME}_VERSION}
+                            COMPATIBILITY AnyNewerVersion
+                            TARGETS_PROPERTY ${PROJECT_NAME}_TARGETS
+                            VARS_PREFIX ${PROJECT_NAME}
+                            NO_CHECK_REQUIRED_COMPONENTS_MACRO)
 # Add the uninstall target
 include(AddUninstallTarget)
 
