Enable AppVeyor tests for Windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,6 @@ after_build:
     # Install only release
     - cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
 
-# For some reason, tests are not working. Debug this and enable them again
-# test_script:
-#    - ctest -C Debug -VV
-#    - ctest -C Release -VV
+test_script:
+    - ctest -C Debug -VV
+    - ctest -C Release -VV
