--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,6 +5,7 @@ clone_folder: c:\dev\lib-template-cmake
 os:
     - Visual Studio 2013
     - Visual Studio 2015
+    - Visual Studio 2017
 
 install:
 
