Add target to generate doxygen documentation
Fix https://github.com/robotology/how-to-export-cpp-library/issues/21

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,3 +123,6 @@ include(AddUninstallTarget)
 if(BUILD_TESTING)
     add_subdirectory(test)
 endif()
+
+# Add targets related to doxygen documention generation
+add_subdirectory(doc)
